# SIMPLE-RUST-TEXBOARD-1

./: Cargo.toml  README.md  db.sh
notes/: feed.txt  postgres.txt
src/: main.rs
static/: style.css
templates/: base.html  homepage.html  thread.html
